--- a/homework.ipynb
+++ b/homework.ipynb
@@ -82,7 +82,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 19,
       "metadata": {},
       "outputs": [],
       "source": [
@@ -104,7 +104,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {
         "id": "cP4rScqMGuze"
       },
@@ -121,11 +121,19 @@
       "metadata": {
         "id": "S73zAB2vxDZs"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "44\n"
+          ]
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p1 = ..."
+        "p1 = len(q1)"
       ]
     },
     {
@@ -151,7 +159,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {
         "id": "KQiLAQuKW9Ce"
       },
@@ -164,7 +172,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {
         "id": "2tXbdHcbXS_7"
       },
@@ -172,14 +180,25 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p2 = ..."
+        "p2 = len(q2.split(','))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 26,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "18"
+            ]
+          },
+          "execution_count": 26,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p2"
       ]
@@ -197,7 +216,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 32,
       "metadata": {
         "id": "1CUU_Td7DdnH"
       },
@@ -206,14 +225,25 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p3(joke):\n",
-        "    ..."
+        "    return \"silly\" in joke and len(joke) <= 50"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 33,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 33,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p3(\"this is a silly joke\")"
       ]
@@ -241,7 +271,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 34,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
@@ -256,7 +286,7 @@
               "129412"
             ]
           },
-          "execution_count": null,
+          "execution_count": 34,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -267,7 +297,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 35,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
@@ -279,14 +309,11 @@
       "outputs": [
         {
           "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
             "text/plain": [
               "'🦄'"
             ]
           },
-          "execution_count": null,
+          "execution_count": 35,
           "metadata": {},
           "output_type": "execute_result"
         }
@@ -308,7 +335,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 44,
       "metadata": {
         "id": "8onkYe3bEFmd"
       },
@@ -316,14 +343,25 @@
       "source": [
         "# YOUR CHANGES HERE\n",
         "\n",
-        "p4 = ..."
+        "p4 = chr(128200) + chr(128201) + chr(128202)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 45,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'📈📉📊'"
+            ]
+          },
+          "execution_count": 45,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p4"
       ]
@@ -341,7 +379,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 71,
       "metadata": {
         "id": "iezT1WYDGclf"
       },
@@ -354,22 +392,35 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 72,
       "metadata": {
         "id": "K0KoZch7Gp1w"
       },
       "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
-        "\n",
-        "p5 = ..."
+        "replacements = {\"jumped over\": \"greeted\", \"lazy\": \"friendly\"}\n",
+        "p5 = q5\n",
+        "for old, new in replacements.items():\n",
+        "    p5 = p5.replace (old, new)"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 73,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "'The quick brown fox greeted the friendly brown dog.'"
+            ]
+          },
+          "execution_count": 73,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p5"
       ]
@@ -389,23 +440,57 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 111,
       "metadata": {
         "id": "PhrfDMbyMnc1"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "NameError",
+          "evalue": "name 'filename' is not defined",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[111]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      7\u001b[39m         \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mValueError\u001b[39;00m, \u001b[38;5;167;01mTypeError\u001b[39;00m):\n\u001b[32m      8\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[43mfilename\u001b[49m, \u001b[33m'\u001b[39m\u001b[33mr\u001b[39m\u001b[33m'\u001b[39m, newline=\u001b[33m'\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[32m     10\u001b[39m        reader = csv.DictReader(file, delimiter=\u001b[33m'\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[33m'\u001b[39m)\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m reader:\n",
+            "\u001b[31mNameError\u001b[39m: name 'filename' is not defined"
+          ]
+        }
+      ],
       "source": [
         "# YOUR CHANGES HERE\n",
-        "\n",
+        "import csv\n",
         "def p6(filename):\n",
-        "    ..."
+        "    def parse_int(value):\n",
+        "        try:\n",
+        "            return int(value)\n",
+        "        except (ValueError, TypeError):\n",
+        "            return None\n",
+        "with open(filename, 'r', newline='') as file:\n",
+        "       reader = csv.DictReader(file, delimiter='\\t')\n",
+        "for row in reader:\n",
+        "            yield {key: parse_int(value)\n",
+        "for key, value in row.items()}\n",
+        "    \n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 60,
+      "execution_count": 89,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "TypeError",
+          "evalue": "'NoneType' object is not iterable",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+            "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
+            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[89]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mp6\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdata6_a.tsv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
+            "\u001b[31mTypeError\u001b[39m: 'NoneType' object is not iterable"
+          ]
+        }
+      ],
       "source": [
         "list(p6(\"data6_a.tsv\"))"
       ]
@@ -1196,7 +1281,7 @@
       "name": "python",
       "nbconvert_exporter": "python",
       "pygments_lexer": "ipython3",
-      "version": "3.9.6"
+      "version": "3.12.1"
     }
   },
   "nbformat": 4,
