--- a/homework.ipynb
+++ b/homework.ipynb
@@ -440,55 +440,50 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 111,
+      "execution_count": 5,
       "metadata": {
         "id": "PhrfDMbyMnc1"
       },
-      "outputs": [
-        {
-          "ename": "NameError",
-          "evalue": "name 'filename' is not defined",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[111]\u001b[39m\u001b[32m, line 9\u001b[39m\n\u001b[32m      7\u001b[39m         \u001b[38;5;28;01mexcept\u001b[39;00m (\u001b[38;5;167;01mValueError\u001b[39;00m, \u001b[38;5;167;01mTypeError\u001b[39;00m):\n\u001b[32m      8\u001b[39m             \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;01mNone\u001b[39;00m\n\u001b[32m----> \u001b[39m\u001b[32m9\u001b[39m \u001b[38;5;28;01mwith\u001b[39;00m \u001b[38;5;28mopen\u001b[39m(\u001b[43mfilename\u001b[49m, \u001b[33m'\u001b[39m\u001b[33mr\u001b[39m\u001b[33m'\u001b[39m, newline=\u001b[33m'\u001b[39m\u001b[33m'\u001b[39m) \u001b[38;5;28;01mas\u001b[39;00m file:\n\u001b[32m     10\u001b[39m        reader = csv.DictReader(file, delimiter=\u001b[33m'\u001b[39m\u001b[38;5;130;01m\\t\u001b[39;00m\u001b[33m'\u001b[39m)\n\u001b[32m     11\u001b[39m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m reader:\n",
-            "\u001b[31mNameError\u001b[39m: name 'filename' is not defined"
-          ]
-        }
-      ],
+      "outputs": [],
       "source": [
         "# YOUR CHANGES HERE\n",
         "import csv\n",
+        "\n",
         "def p6(filename):\n",
         "    def parse_int(value):\n",
         "        try:\n",
         "            return int(value)\n",
         "        except (ValueError, TypeError):\n",
         "            return None\n",
-        "with open(filename, 'r', newline='') as file:\n",
-        "       reader = csv.DictReader(file, delimiter='\\t')\n",
-        "for row in reader:\n",
-        "            yield {key: parse_int(value)\n",
-        "for key, value in row.items()}\n",
+        "\n",
+        "    try:\n",
+        "        with open(filename, 'r', newline='') as file:\n",
+        "            reader = csv.DictReader(file, delimiter='\\t')\n",
+        "            for row in reader:\n",
+        "                yield {key: parse_int(value) for key, value in row.items()}\n",
+        "    except FileNotFoundError:\n",
+        "        print(f\"Error: File '{filename}' not found.\")\n",
+        "        return\n",
+        "    except Exception as e:\n",
+        "        print(f\"Error: An unexpected error occurred: {e}\")\n",
+        "        return\n",
         "    \n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 89,
+      "execution_count": 6,
       "metadata": {},
       "outputs": [
         {
-          "ename": "TypeError",
-          "evalue": "'NoneType' object is not iterable",
-          "output_type": "error",
-          "traceback": [
-            "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-            "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-            "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[89]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[38;5;28;43mlist\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mp6\u001b[49m\u001b[43m(\u001b[49m\u001b[33;43m\"\u001b[39;49m\u001b[33;43mdata6_a.tsv\u001b[39;49m\u001b[33;43m\"\u001b[39;49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n",
-            "\u001b[31mTypeError\u001b[39m: 'NoneType' object is not iterable"
-          ]
+          "data": {
+            "text/plain": [
+              "[{'a': 3, 'b': 4}]"
+            ]
+          },
+          "execution_count": 6,
+          "metadata": {},
+          "output_type": "execute_result"
         }
       ],
       "source": [
@@ -497,9 +492,20 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 61,
+      "execution_count": 8,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[{'a': None, 'b': None, 'c': None}]"
+            ]
+          },
+          "execution_count": 8,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "list(p6(\"data6_b.tsv\"))"
       ]
@@ -531,7 +537,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 63,
+      "execution_count": 16,
       "metadata": {
         "id": "5-wvb6MGMuUT"
       },
@@ -540,23 +546,58 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p7(filename):\n",
-        "    ..."
+        "    rows = p6(filename)\n",
+        "    headers = next(rows)\n",
+        "    finagled = False\n",
+        "    for row in rows:\n",
+        "        result = {}\n",
+        "        hpf = False\n",
+        "        for header, value in zip(headers, row):\n",
+        "            try:\n",
+        "                result[header] = True if is_none(value) else int(value)\n",
+        "            except ValueError:\n",
+        "                result[header] = 3\n",
+        "                hpf = True\n",
+        "                result[\"finagled\"] = True if hpf else False\n",
+        "                yield result"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 15,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "execution_count": 15,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "list(p7(\"data7_a.tsv\"))"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 13,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "[]"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "list(p7(\"data7_b.tsv\"))"
       ]
@@ -656,7 +697,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 20,
       "metadata": {
         "id": "bm-zS-HLQQgh"
       },
@@ -665,23 +706,46 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p9(filename):\n",
-        "    ...\n"
+        "    with open(filename, 'r') as file:\n",
+        "        return sum(1 for line in file if line.strip())\n"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 21,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "2"
+            ]
+          },
+          "execution_count": 21,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p9(\"data9_a.tsv\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 22,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "1"
+            ]
+          },
+          "execution_count": 22,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p9(\"data9_b.tsv\")"
       ]
@@ -708,7 +772,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 23,
       "metadata": {
         "id": "sGqg9EJ5H-8V"
       },
@@ -717,23 +781,53 @@
         "# YOUR CHANGES HERE\n",
         "\n",
         "def p10(filename):\n",
-        "    ..."
+        "    try:\n",
+        "        with open(filename, 'r') as file:\n",
+        "            for line in file:\n",
+        "                if line.strip():\n",
+        "                    if '\\t' not in line:\n",
+        "                        return False\n",
+        "            return True\n",
+        "    except FileNotFoundError:\n",
+        "        return False"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 24,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 24,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p10(\"data10_a.tsv\")"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 25,
       "metadata": {},
-      "outputs": [],
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "False"
+            ]
+          },
+          "execution_count": 25,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "p10(\"data10_b.tsv\")"
       ]
